--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "jacksleight/chalk": "0.5.*"
+        "jacksleight/chalk": "dev-dev"
     },
     "autoload": {
         "psr-4": {
