--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "autoload": {
         "psr-4": {
             "Chalk\\Article\\": "library/",
+            "Chalk\\Article\\Backend\\": "backend/library/",
+            "Chalk\\Article\\Frontend\\": "frontend/library/",
             "Chalk\\Article\\Backend\\Controller\\": "backend/controllers/",
             "Chalk\\Article\\Frontend\\Controller\\": "frontend/controllers/"
         }
